src/test/deca/context/invalid/provided/testi11.deca
class A{
    void set(void x){}
}